; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_percentile.c_sameValue.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_percentile.c_sameValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (double, double)* @sameValue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sameValue(double %0, double %1) #0 {
  %3 = alloca double, align 8
  %4 = alloca double, align 8
  store double %0, double* %3, align 8
  store double %1, double* %4, align 8
  %5 = load double, double* %4, align 8
  %6 = load double, double* %3, align 8
  %7 = fsub double %6, %5
  store double %7, double* %3, align 8
  %8 = load double, double* %3, align 8
  %9 = fcmp oge double %8, -1.000000e-03
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load double, double* %3, align 8
  %12 = fcmp ole double %11, 1.000000e-03
  br label %13

13:                                               ; preds = %10, %2
  %14 = phi i1 [ false, %2 ], [ %12, %10 ]
  %15 = zext i1 %14 to i32
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
